Fix css errors due to missing colors

--- a/app/skins/Main/Main.css
+++ b/app/skins/Main/Main.css
@@ -10,16 +10,59 @@
     transparent-nct: rgba(0,0,0,0.005); /* Same as `transparent`, is not click-through */
 
     /* fx overridden values */
+
+    -fx-base: #ececec;
+    -fx-control-inner-background: yellow;
+    -fx-control-inner-background-alt: yellow;
+    -fx-dark-text-color: yellow;
+    -fx-mid-text-color: yellow;
+    -fx-light-text-color: yellow;
+    -fx-accent: yellow;
+    -fx-default-button: yellow;
+    -fx-focus-color: yellow;
+    -fx-faint-focus-color: yellow;
+    -fx-color: yellow;
+    -fx-hover-base: yellow;
+    -fx-pressed-base: yellow;
+    -fx-text-background-color: yellow;
+    -fx-box-border: yellow;
+    -fx-text-box-border: yellow;
+    -fx-shadow-highlight-color: yellow;
+    -fx-outer-border: yellow;
+    -fx-inner-border: yellow;
+    -fx-inner-border-horizontal: yellow;
+    -fx-inner-border-bottomup: yellow;
+    -fx-body-color: yellow;
+    -fx-body-color-bottomup: yellow;
+    -fx-body-color-to-right: yellow;
+    -fx-text-base-color: yellow;
+    -fx-text-inner-color: yellow;
+    -fx-mark-color: yellow;
+    -fx-mark-highlight-color: yellow;
+    -fx-selection-bar: yellow;
+    -fx-selection-bar-non-focused: yellow;
+    -fx-selection-bar-text: yellow;
+    -fx-cell-hover-color: yellow;
+    -fx-cell-focus-inner-border: yellow;
+    -fx-table-cell-border-color: transparent;
+    -fx-page-bullet-border: yellow;
+    -fx-page-indicator-hover-border: yellow;
+    -fx-focused-text-base-color: yellow;
+    -fx-focused-mark-color: yellow;
     -fx-hover-base: yellow;
     -fx-pressed-base: yellow;
     -fx-outer-border: yellow;
     -fx-inner-border: yellow;
     -fx-body-color: yellow;
+    -fx-control-inner-background: yellow;
     -fx-mark-highlight-color: yellow;
     -fx-base: yellow;
+    -fx-accent: yellow;
+    -fx-selection-bar: yellow;
+    -fx-background: yellow;
+    -fx-cell-focus-inner-border: yellow;
     -fx-shadow-highlight-color: yellow;
     -fx-text-background-color: yellow;
-    -fx-background-color: transparent;
     -fx-text-base-color: -skin-def-font-color;
     -fx-disabled-opacity: 0.4;
     -fx-focus-color: #ffcc66;
